syntax="proto3";
option go_package = "pmts/proto";
package monitoring;

service MonitoringService {
    rpc UploadSamples (UploadRequest) returns (UploadResponse);
    rpc GetMetrics (GetMetricsRequest) returns (GetMetricsResponse);
    rpc VerifyKey (VerifyKeyRequest) returns (VerifyKeyResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc CreateAlertRule (CreateRuleRequest) returns (CreateRuleResponse);
    rpc GetAlertRules (GetRulesRequest) returns (GetRulesResponse);
}


message Metric{
    string name = 1;
    map <string, string> labels = 2;
}

message Sample{
    int64 timestamp = 1;
    double value = 2;
}

message TimeSeries{
    Metric metric = 1;
    repeated Sample samples = 2;
}

message UploadRequest{
    repeated TimeSeries list = 1;
    int64 user_id   = 2;
}

message UploadResponse{
    int32 stored_count = 1;
    string error = 2;
}

message GetMetricsRequest{
    string match_name = 1;
    int64 user_id = 2;
}

message GetMetricsResponse{
    repeated TimeSeries list = 1;
}

message VerifyKeyRequest {
    string api_key = 1;
}

message VerifyKeyResponse {
    bool valid = 1;
    int64 user_id = 2;
}

message CreateUserRequest {
  string email = 1;
}

message CreateUserResponse {
  int64 user_id = 1;
  string api_key = 2;
  string error = 3;
}

message AlertRule {
  string metric_name = 1;
  double threshold = 2;
  int64 user_id = 3;
}

message CreateRuleRequest {
  int64 user_id = 1;
  string metric_name = 2;
  double threshold = 3;
}

message CreateRuleResponse {
  int64 rule_id = 1;
}

message GetRulesRequest {
  int64 user_id = 1; 
}

message GetRulesResponse {
  repeated AlertRule rules = 1;
}